environment/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        io.kompose.network/backnet: "true"
        io.kompose.service: db
    spec:
      containers:
        - name: db
          image: mariadb:10-focal
          args:
            - --default-authentication-plugin=mysql_native_password
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 --password=$MYSQL_ROOT_PASSWORD --silent
            initialDelaySeconds: 30
            periodSeconds: 3
            failureThreshold: 5
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-data
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
status: {}
