environment/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy: {}
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        io.kompose.network/frontnet: "true"
        io.kompose.service: proxy
    spec:
      containers:
        - image: msfabian/proxy-nginx-msf:latest
          name: proxy
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
