environment/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    io.kompose.service: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
